--- a/style.css
+++ b/style.css
@@ -1,36 +1,85 @@
 Body{
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 color: 777;
-background: 777;
-width: 960px;
-font-size: 18px;
+background: grey;
+max-width: 960px;
+margin: auto;
+
 
 }
 header{
     background: #ebebeb;
     display: block;
     text-align: center;
-    margin: 20px
-
-
+    margin: 10px 30px 10px 30px;
+    font-size: 20px;
+    text-align:center;
+    text-decoration: none ;
+    /* background-color: blue; */
+    color: grey;
+    padding: 30px;
 
 }
 nav{background: #ebebeb;
-display: block;
-text-align: center;
+    display: block;
+    text-align: center;
+    margin: 10px 30px 10px 30px;
+    font-size: 20px;
+    text-align:center;
+    text-decoration: none ;
+    /* background-color: blue; */
+    color: grey;
+    padding: 30px;
 
 }
-section{background: #ebebeb;
-    width: 495px;
+section{background: red;
+    width: 435px; 
+    height: 300px;
     text-align: center;
+    float: left;
+    padding: 10px;
+    height: 260px;
+    margin: 0px 10px 0px 30px;
+    color: grey;
+    boarder: 10px;
+
 
 }
-aside{background: #ebebeb;
+aside{background: blue;
+    display: inline-block;
+    width: 370px;
+
     text-align: center;
+    padding: 10px;
+    height: 300px;
+    /* margin: 0px 0px 10px 0px; */
+    
+float: left;
+
 
 }
-footer{background:#ebebeb;
+article{
+    background: yellow;
+    display: block;
     text-align: center;
+    margin: 10px 30px 10px 30px;
+    font-size: 20px;
+    text-align:center;
+    text-decoration: none ;
+    /* background-color: blue; */
+    color: grey;
+    padding: 30px;
+}
+footer{ 
+    background: #ebebeb;
+    display: block;
+    margin: 10px 30px 10px 30px;
+    font-size: 20px;
+    text-align:center;
+    text-decoration: none ;
+    color: grey;
+    padding: 30px;
+    clear: both;
 
 }
 h1{color: #777;
@@ -41,5 +90,18 @@ p{color: #777;
     background: #ebebeb;
     text-align: center;
 }
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  /* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  } 
 
 /* float, padding, margin, display, overflow, clear and text-align */
