--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-Body{
+body{
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 color: 777;
 background: grey;
@@ -32,7 +32,8 @@ nav{background: #ebebeb;
     padding: 30px;
 
 }
-section{background: red;
+section{background: #ebebeb;
+    font-size: 20px;
     width: 435px; 
     height: 300px;
     text-align: center;
@@ -45,30 +46,31 @@ section{background: red;
 
 
 }
-aside{background: blue;
+aside{
+    background: #ebebeb;
     display: inline-block;
     width: 370px;
-
+    font-size: 20px;
     text-align: center;
     padding: 10px;
     height: 300px;
-    /* margin: 0px 0px 10px 0px; */
-    
-float: left;
-
-
+    margin: 0px 0px 10px 0px;
+    float: left;
+    color: grey;
 }
+
 article{
-    background: yellow;
+    background: grey;
     display: block;
     text-align: center;
-    margin: 10px 30px 10px 30px;
+    margin: 30px 30px 10px 30px;
     font-size: 20px;
     text-align:center;
     text-decoration: none ;
     /* background-color: blue; */
-    color: grey;
+    color: #ebebeb;
     padding: 30px;
+    height: 
 }
 footer{ 
     background: #ebebeb;
@@ -82,15 +84,24 @@ footer{
     clear: both;
 
 }
-h1{color: #777;
+h1{
+    color: #777;
+    font-size: 20px;
     background: #ebebeb;
     text-align: center;
+    padding: 5px 10px 5px 10px;
+  overflow: visible;
+
 }
-p{color: #777;
+p{
+    color: #777;
+    font-size: 20px;
     background: #ebebeb;
     text-align: center;
+    padding: 5px 10px 5px 10px;
+    overflow: visible;
 }
-.column {
+.column{
     float: left;
     width: 50%;
     padding: 10px;
